--- a/estilos/style.css
+++ b/estilos/style.css
@@ -279,6 +279,25 @@ span a {
         background-image: linear-gradient(125deg, #a40606 0%, #d98324 74%);
         margin-top: 0%;
     }
+                /*CONTACTO*/
+    .mainContacto{
+        display: flex;
+        align-items: center;
+        background-color: #a40606;
+        background-image: linear-gradient(125deg, #a40606 0%, #d98324 74%); 
+    }
+   
+    iframe{
+        width: 60%;
+        height: 60%;
+    }
+    span a {
+        border-style: none;
+        width: 100%;
+    }
+    .redes{
+        width: 100%;
+    }
 
 }
                 /*SMARTPHONE*/
@@ -372,18 +391,37 @@ span a {
          height: 2%;
         background-color: transparent;
         margin-top: 0%;
+        margin-bottom: 0%;
     }
     .sectorKing , .sectorLear , .nuestraFlota1 , .MainFlota{
-        background-color: transparent;
+        background-color: #772f1a;
+        background-image: linear-gradient(125deg, #772f1a 0%, #f2a65a 74%);
         margin-top: 0%;
     }
                /*CONTACTO*/ 
-    body{
-    background-color: #772f1a;
-        background-image: linear-gradient(125deg, #772f1a 0%, #f2a65a 74%);
-    }
     .mainContacto{
-        background-color: transparent;
+        display: flex;
+        align-items: center;
+        background-color: #772f1a;
+        background-image: linear-gradient(125deg, #772f1a 0%, #f2a65a 74%);
+        }
+           
+    iframe{
+        width: 60%;
+        height: 60%;
     }
+    span a {
+        border-style: none;
+        width: 100%;
+        font-size: 15px;
+    }
+        .redes{
+        width: 100%;
+    }
+    .divMapa{
+        font-size: 10px;
+    }
+        
+  
 }
 
