--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7,6 +7,7 @@
  */
  @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
  @import url('https://fonts.googleapis.com/css2?family=The+Nautigal&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Luxurious+Roman&display=swap');
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -111,7 +112,7 @@ h1, .h1 {
 }
 @media (min-width: 1200px) {
   h1, .h1 {
-    font-size: 2.5rem;
+    font-size: 120px;
   }
 }
 
@@ -121,7 +122,7 @@ h2, .h2 {
 }
 @media (min-width: 1200px) {
   h2, .h2 {
-    font-size: 2rem;
+    font-size: 60px;
   }
 }
 
@@ -3926,6 +3927,8 @@ textarea.form-control-lg {
   display: block;
   padding: 0.5rem 1rem;
   color: #01050a;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 20px;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -4527,6 +4530,7 @@ textarea.form-control-lg {
 .card-body {
   flex: 1 1 auto;
   padding: 1rem 1rem;
+  background-image: linear-gradient(to left, grey, white);
 }
 
 .card-title {
@@ -4540,6 +4544,8 @@ textarea.form-control-lg {
 
 .card-text:last-child {
   margin-bottom: 0;
+  font-size: 20px;
+  font-family: 'Bebas Neue', cursive;
 }
 
 .card-link + .card-link {
@@ -4591,6 +4597,7 @@ textarea.form-control-lg {
 .card-img-top,
 .card-img-bottom {
   width: 100%;
+  height: 300px;
 }
 
 .card-img,
