--- a/scss/styles.css
+++ b/scss/styles.css
@@ -59,15 +59,12 @@ footer {
   font-size: 2rem;
 }
 
-nav {
-  background-color: transparent;
-}
 
 .nav-link {
   border-style: solid;
   border-width: 1px;
   border-color: #2b2431;
-  margin-right: 5%;
+  margin-right: 5%; 
 }
 
 body {
@@ -79,3 +76,4 @@ body {
 .d-block {
   border-radius: 2%;
 }
+/*# sourceMappingURL=styles.css.map */
